src/httpdocs/index.css
* {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1rem;
    color: black;
}

body {
    --interface-width: 700px;
    --min-rounding: 3px;
    --max-rounding: 10px;
    --spacing: 10px;
    --minor-size: 50px;

    width: 100vw;
    height: 100vh;
    background: #b5a696;
    background: linear-gradient(225deg,#d1c6ba,#8c8175);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    align-items: center;
    justify-items: center;
    overflow: hidden;
}

#interface {
    width: min(100%, var(--interface-width));
    background: #333;
    border-radius: 10px;
    padding: var(--spacing);
    display: grid;
    grid-template-columns: 4fr 3fr;
    grid-template-rows: var(--minor-size) auto var(--minor-size);
    grid-gap: var(--spacing);
    box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.5);
}

#messages-wrapper, #push-messages-wrapper {
    height: 520px;
    background: #222;
    box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.5);
    overflow: hidden;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
    align-content: end;
}

#messages-wrapper {
    grid-column: 1/2;
    grid-row: 1/3;
    border-radius: var(--min-rounding) var(--max-rounding) var(--max-rounding) var(--max-rounding);
}

#push-messages-wrapper {
    grid-column: 2/3;
    grid-row: 2/4;
    border-radius: var(--max-rounding) var(--max-rounding) var(--min-rounding) var(--max-rounding);
    align-content: start;
}

#push-messages-header {
    grid-column: 2/3;
    grid-row: 1/2;
    width: 100%;
    display: grid;
    grid-template-columns: auto var(--minor-size);
    grid-column-gap: var(--spacing);
}

#push-messages-title {
    color: white;
    line-height: var(--minor-size);
    margin: 0;
    margin-left: var(--spacing);
    font-size: 1.5rem;
    font-weight: bold;
}

#messages, #push-messages {
    min-height: max-content;
    list-style: none;
    margin: 0;
    padding: var(--spacing) 0;
    display: grid;
    grid-auto-rows: auto;
    grid-row-gap: var(--spacing);
}

#messages::-webkit-scrollbar, #push-messages::-webkit-scrollbar {
    display: none;
}

#messages > .message {
    margin: 0 var(--spacing);
    display: grid;
    grid-template-columns: 40px auto;
    grid-column-gap: var(--spacing);
}

#messages > .message.me {
    grid-template-columns: auto 40px;
    justify-items: end;
}

#messages > .message > span {
    background-color: white;
    width: fit-content;
    border-radius: var(--max-rounding);
    padding: var(--spacing);
}

#messages > .message > div {
    width: 40px;
    height: 40px;
    background-color: var(--c);
    border-radius: 50%;
    border: solid 2px white;
    box-sizing: border-box;
    text-align: center;
    line-height: 36px;
    text-anchor: middle;
    color: white;
    font-weight: bold;
}

#push-messages > .push-message {
    margin: 0 var(--spacing);
    background-color: white;
    width: fit-content;
    border-radius: var(--max-rounding);
    padding: var(--spacing);
}

#message-creation {
    grid-column: 1/2;
    grid-row: 3/4;
    display: grid;
    grid-template-columns: auto var(--minor-size);
    grid-column-gap: var(--spacing);
}

#message-input {
    border: none;
    border-radius: var(--max-rounding) var(--max-rounding) var(--max-rounding) var(--min-rounding);
    padding: 0 var(--spacing);
}

#message-input:focus {
    border: none;
    outline: none;
}

#message-confirm, #admin-opener {
    border-radius: 50%;
    border: none;
    background: #009788;
    width: 100%;
    height: 100%;
    transition: scale 200ms;
    display: flex;
    align-items: center;
    justify-content: center;
}

#admin-opener {
    background: #972600;
}

#message-confirm > img, #admin-opener > img {
    width: 60%;
    height: 60%;
}

#message-confirm:hover, #admin-opener:hover {
    cursor: pointer;
}

#message-confirm:hover > img, #admin-opener:hover > img {
    transform: scale(1.1);
}

